force-app/main/default/objects/Healthcare_Quote_Staging__c/Healthcare_Quote_Staging__c.object-meta.xml
<CustomObject>
    <label>Healthcare Quote Staging</label>
    <nameField>
        <label>Healthcare Quote Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Healthcare Quote Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>