force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/AccountExternalId__c.field-meta.xml
<CustomField>
    <fullName>AccountExternalId__c</fullName>
    <label>Account External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>