force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <label>Billing Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>