force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>