force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>ErrorLog__c</fullName>
    <label>Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>