force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/ExternalQuoteId__c.field-meta.xml
<CustomField>
    <fullName>ExternalQuoteId__c</fullName>
    <externalId>true</externalId>
    <label>External Quote Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>