force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/OpportunityExternalId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityExternalId__c</fullName>
    <label>Opportunity External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>