force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/ProcessDate__c.field-meta.xml
<CustomField>
    <fullName>ProcessDate__c</fullName>
    <label>Process Date</label>
    <type>DateTime</type>
</CustomField>