force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/QuoteName__c.field-meta.xml
<CustomField>
    <fullName>QuoteName__c</fullName>
    <label>Quote Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>