force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/SalesforceQuoteId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceQuoteId__c</fullName>
    <label>Salesforce Quote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>