force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/ShippingAmount__c.field-meta.xml
<CustomField>
    <fullName>ShippingAmount__c</fullName>
    <label>Shipping Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>