force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <label>Shipping Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>