force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>App A</fullName><default>false</default><label>App A</label></value>
            <value><fullName>App B</fullName><default>false</default><label>App B</label></value>
            <value><fullName>App C</fullName><default>false</default><label>App C</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>